Change Log:
=============================
- DanbooruDownloader20230623
  - Fix #277: update parser for %uploadDateTime% on sankaku.
  - Fix #283: update tags parser causing sankaku fail to get the files.
  - Update ddos check handling for batch job

- DanbooruDownloader20230408
  - Fix #279: Update handling for Sankaku AI Banner with help from @bea831333
  - Update to .Net Framework 4.8.1
  - Add clear cookie button.

- DanbooruDownloader20220828
  - Implement #272: add option to use last-modified timestamp for downloaded file.
  - Update Cloudflare detection.

- DanbooruDownloader20220806
  - Fix Issue #268: Update Sankaku parser for tag count.

- DanbooruDownloader20220804
  - Fix Issue #266: Update Shimmie Html Parser for swf file.
  - Fix Issue #267: Update sankaku parser.

- DanbooruDownloader20220406
  - Fix Issue #258: update parser for gelbooru.
  - Add handler to ask cookie again if cloudfire session expired.

- DanbooruDownloader20211225
  - Fix Issue #256: Add ShimmieHtmlParser for rule34hentai[.]net
    - Update the `DanbooruProviderList.xml`, change the Preferred to Html and update the QueryStringHtml to `/post/list/%_query%`
  - Add feature to perform hostname replacement for sankaku.
    - Create a text file named `host_replacement.txt`
    - Format: `old_hostname	new_hostname`

- DanbooruDownloader20211104
  - Fix Issue #243: update readme for sankaku login.
  - Fix Issue #250: prevent excessive blinking in batch job.
  - Add support to add multiple job in batch job (separate the tags with new line).
  - Fix Issue #251: always delete .!tmp files for batch job.
  - Fix Issue #249: add try/catch for each post in batch job.
  - Refactor batch job.

- DanbooruDownloader20210424
  - Issue #236: update cookie handling.
  - Update shimmie parser to resolve additional xhtml entities
  - Update #225: sankaku next param handler
  - Add custom exception for cloudflare

- DanbooruDownloader20201025
  - Fix Cookie Handling