@@ -1,5 +1,8 @@
 Change Log:
 =============================
+- DanbooruDownloader20230629
+  - Fix #284: Update tags parser for sankaku again
+
 - DanbooruDownloader20230623
   - Fix #277: update parser for %uploadDateTime% on sankaku.
   - Fix #283: update tags parser causing sankaku fail to get the files.
